crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__normalizes_package_import_spacing.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
package   com.example
import z.Z
import a.A
class Demo

formatted:
package com.example

import a.A
import z.Z

class Demo

diagnostics:
(none)
