crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__object_delegation.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
val value = object : First, /* orphan */ , Second {}

formatted:
val value = object
  : First, /* orphan */ , Second {
}

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(41), end: TextSize(42) }) message=expected delegation specifier between commas
