crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__parenthesized_bogus_inner_leading_comment.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun f() {
  val b = (
  /* leads a bogus inner expression */
  ,)
}

formatted:
fun f() {
  val b = ( /* leads a bogus inner expression */,)
}

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(63), end: TextSize(64) }) message=expected expression
