crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__phase_20_statements_and_control_flow.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun validControlFlow(value: Any, ready: Boolean, items: List<Any>) {
    ;
    if (ready); else {}
    when (value) {
        1, -> one
        else -> zero
    }
    try {} catch (cause: Throwable) {} finally {}
    for (item in items) {}
    while (ready);
    do {} while (ready)
    return@owner value
}

fun missingIfParts() {
    if value
    val afterIf = 1
}

fun missingWhenBraces(value: Int) {
    when (value)
        1 -> one
        2 -> two
    val afterWhen = 1
}

fun malformedWhenEntries(value: Int) {
    when (value) {
        , 1 -> one
        2 two
        3 -> three
        4 if -> four
        else ->
    }
}

fun malformedTry() {
    try
    catch {}
    finally {}
    catch (late: Throwable) {}
}

fun malformedLoops(items: List<Any>, ready: Boolean) {
    for (in items)
    while
    do {} (ready)
}

fun malformedJumps() {
    break value
    continue value
    return@
    throw
    val afterThrow = 1
}

fun missingNestedBlockClose() {
    if (true) {
        while (true) {
            value

formatted:
fun validControlFlow(value: Any, ready: Boolean, items: List<Any>) {
  ;
  if (ready); else {}
  when (value) {
    1, -> one
    else -> zero
  }
  try {} catch (cause: Throwable) {} finally {}
  for (item in items) {}
  while (ready);
  do {} while (ready)
  return@owner value
}

fun missingIfParts() {
  if value
  val afterIf = 1
}

fun missingWhenBraces(value: Int) {
  when (value)
    1 -> one
    2 -> two
  val afterWhen = 1
}

fun malformedWhenEntries(value: Int) {
  when (value) {
    , 1 -> one
    2 two
    3 -> three
    4 if -> four
    else ->
  }
}

fun malformedTry() {
  try catch {} finally {} catch (late: Throwable) {}
}

fun malformedLoops(items: List<Any>, ready: Boolean) {
  for ( in items) while do {} (ready)
}

fun malformedJumps() {
  break value
  continue value
  return@
  throw
  val afterThrow = 1
}

fun missingNestedBlockClose() {
  if (true) {
    while (true) {
      value

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(339), end: TextSize(344) }) message=expected '(' before condition
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(339), end: TextSize(344) }) message=expected condition after 'if'
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(339), end: TextSize(344) }) message=expected ')' after condition
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(429), end: TextSize(430) }) message=expected '{' after when subject
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(459), end: TextSize(462) }) message=expected '}' after when
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(546), end: TextSize(547) }) message=expected when condition between commas
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(579), end: TextSize(580) }) message=expected expression after operator
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(579), end: TextSize(580) }) message=expected '->' in when entry
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(579), end: TextSize(580) }) message=expected when entry body
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(603), end: TextSize(605) }) message=expected expression after when guard
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(631), end: TextSize(632) }) message=expected when entry body
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(669), end: TextSize(674) }) message=expected block after 'try'
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(675), end: TextSize(676) }) message=expected catch parameter
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(724), end: TextSize(725) }) message=catch clause must precede finally
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(791), end: TextSize(793) }) message=expected loop variable
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(815), end: TextSize(817) }) message=expected '(' before condition
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(815), end: TextSize(817) }) message=expected condition after 'while'
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(815), end: TextSize(817) }) message=expected ')' after condition
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(821), end: TextSize(822) }) message=expected 'while' after do body
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(865), end: TextSize(870) }) message=break and continue do not accept an expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(884), end: TextSize(889) }) message=break and continue do not accept an expression
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(906), end: TextSize(911) }) message=expected label name
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(916), end: TextSize(919) }) message=expected expression after 'throw'
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1027), end: TextSize(1027) }) message=expected '}' after block
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1027), end: TextSize(1027) }) message=expected '}' after block
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1027), end: TextSize(1027) }) message=expected '}' after block
