crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__preserves_file_annotation_preamble.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
@file:Suppress("unused")

package sample

class Demo

formatted:
@file:Suppress("unused")

package sample

class Demo

diagnostics:
(none)
